# sample-authentication-permissions

./: .gitignore  README.md  package-lock.json
cpp/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cpp/sdk/: README.md
cpp/src/: main.cpp
flutter/jwt_example/: README.md  pubspec.yaml
flutter/jwt_example/android/app/: build.gradle
flutter/jwt_example/ios/Runner/: Info.plist
flutter/jwt_example/ios/Runner.xcodeproj/: project.pbxproj
flutter/jwt_example/lib/: main.dart
flutter/jwt_example/linux/: CMakeLists.txt  my_application.cc
flutter/jwt_example/test/: widget_test.dart
flutter/jwt_example/web/: index.html  manifest.json
flutter/jwt_example/windows/: CMakeLists.txt
iOS/PermissionsExample/: README.md
iOS/PermissionsExample/PermissionsExample/: DittoManager.swift  LoginView.swift  MainView.swift
iOS/PermissionsExample/PermissionsExample.xcodeproj/: project.pbxproj
iOS/Simple/: README.md
iOS/Simple/PermissionsExample/: AuthStub.swift  DittoManager.swift  DocPage.swift  PermissionsExampleApp.swift  UserRole.swift
iOS/iOS-auth0/: README.md
react/: .gitignore  package-lock.json  package.json  tsconfig.json
react/src/: App.js  App.jsx  App.tsx  ditto.js  ditto.ts  index.js  index.jsx  index.tsx
server/advanced/: index.js  package-lock.json  package.json
server/configurable/: README.md  config.json  config.json.example  config_schema.json  index.js  package-lock.json  package.json
server/configurable/tests/: default_fields.test.js  index.test.js  required_fields.test.js
server/simple/: package-lock.json  server.js
(+8 files in other folders)
